--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -1,13 +1,9 @@
 $theme-colors: (
   'primary': (
-    'base': green,
+    'base': #0077fa,
   ),
 );
 
 @forward 'element-plus/theme-chalk/src/common/var.scss' with (
-  $colors: (
-    'primary': (
-      'base': green,
-    ),
-  )
+  $colors: $theme-colors
 );
