--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', Arial,
+    sans-serif;
 }
 
 ul,
@@ -13,4 +15,18 @@ li {
 
 * {
   box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 5px; //对垂直方向滚动条
+  height: 5px; //对水平方向滚动条
+}
+//滚动的滑块
+::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: #ccc//滚动条的颜色;
+}
+//内层滚动槽
+::-webkit-scrollbar-track-piece {
+  background-color: #fff;
 }
