feat: 页面布局整体调整，新增菜单收缩功能

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,7 +23,7 @@ li {
     align-items: center;
     margin-right: 12px;
     .label {
-      color: #606266;
+      color: $primary-text-color;
       font-size: 12px;
       white-space: nowrap;
       padding-right: 8px;
