--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -30,7 +30,7 @@
     height: 40px;
     padding: 0 15px;
     margin-right: 0;
-    border-bottom: 1px solid #f1f1f1;
+    border-bottom: 1px solid $split-line-color;
     .el-dialog__title {
       font-size: 15px;
       font-weight: bold;
@@ -47,5 +47,12 @@
   .el-dialog__footer {
     padding: 10px 15px 10px 0;
     border-top: 1px solid #f1f1f1;
+  }
+}
+
+.el-menu--vertical {
+  .el-menu-item.is-active {
+    color: #fff;
+    background: linear-gradient(30deg, #4767d9, #5878e7, #5b7bea);
   }
 }
