--- a/src/styles/element/var.scss
+++ b/src/styles/element/var.scss
@@ -5,3 +5,9 @@ $base-head-height: 50px;
 $content-full-padding: 15px;
 $content-lr-padding: 0 15px;
 $content-padding-right: 0 15px;
+
+$primary-text-color: #252631;
+$regular-text-color: #778ca2;
+$secondary-text-color: #a6b6c6;
+$page-content-bg-color: #f5f7fd;
+$split-line-color: #e9ecf7;
