--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -2,4 +2,8 @@
 :root {
   --el-menu-item-height: 50px;
   --el-menu-sub-item-height: 50px;
+  --el-menu-bg-color: #485078;
+  --el-menu-text-color: #9fa6cb;
+  --el-menu-active-color: #4768d9;
+  --el-menu-hover-bg-color: #485078;
 }
