feat: 解决菜单折叠卡顿的问题

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -66,3 +66,19 @@ li {
 ::-webkit-scrollbar-track-piece {
   background-color: #fff;
 }
+
+/* fade-transform */
+.fade-transform-leave-active,
+.fade-transform-enter-active {
+  transition: all 0.5s;
+}
+
+.fade-transform-enter {
+  opacity: 0;
+  transform: translateX(-20px);
+}
+
+.fade-transform-leave-to {
+  opacity: 0;
+  transform: translateX(20px);
+}
