feat: 完成大部分页面列表查询接口联调

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,7 +30,7 @@ li {
     }
   }
 }
-.grid-box {
+.grid-box:not(:first-of-type) {
   margin-top: 15px;
 }
 .pagination {
@@ -51,6 +51,12 @@ li {
   .el-link__inner {
     font-size: 12px;
   }
+}
+
+.overflow {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 ::-webkit-scrollbar {
