--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -58,6 +58,12 @@
     padding: 10px 15px 10px 0;
     border-top: 1px solid #f1f1f1;
   }
+  .el-drawer__header {
+    color: #333;
+    padding: 15px 20px;
+    border-bottom: 1px solid #d8d8d8;
+    margin-bottom: 0;
+  }
 }
 
 .el-menu--vertical {
