feat: 新增创建任务、创建任务步骤，字段映射

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -83,3 +83,10 @@
   display: flex;
   align-items: center;
 }
+
+.date-picker {
+  width: 100% !important;
+  .el-input__wrapper {
+    width: 100%;
+  }
+}
